--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="shop">
 	<header class="main-header">
 		<div class="top-header">
 		<div class="container clearfix">
@@ -75,12 +75,12 @@
 
 
 			<div class="filter-block">
-						<div class="catalog-top">
-							<span class="catalog-title">Фильтр:</span>
+						<div class="content-column-title">
+							<span>Фильтр:</span>
 						</div>
 						<form class="filter">
 
-							<div class="price-range ">
+							<div class="price-range">
 
 								<h3 class="filter-title">Цена:</h3>
 								<div class="range-controls">
@@ -145,16 +145,17 @@
 						</div>
 
 						 <section class="catalog">
-							<div class="ontent-column-title clearfix">
+							<div class="content-column-title clearfix">
 									<span>Сортировка:</span>
 									<ul class="sort-controls">
-									<li><a class="sort-active" href="#">По цене</a></li>
-									<li><a href="#">По типу</a></li>
-									<li><a href="#">По функционалу</a></li>
+									<li><a class="sort-btn" class="sort-active" href="#">По цене</a></li>
+									<li><a class="sort-btn" href="#">По типу</a></li>
+									<li><a class="sort-btn" href="#">По функционалу</a></li>
 									<li><a class="arrow-up" href="#"></a></li>
 									<li><a class="arrow-down" href="#"></a></li>
 					    </ul>
 							</div>
+							<div class="catalog-items">
                          <article class="catalog-item">
 							<div class="actions">
 
@@ -162,7 +163,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img class="item-img" src="img/bfg-9000.jpg" width="127" height="112" alt=" Перфоратор BOSCH BFG 9000">
+								<img class="item-img" src="img/bfg-9000.jpg" width="218" height="180" alt=" Перфоратор BOSCH BFG 9000">
 							</div>
 							<h1 class="title"> Перфоратор BOSCH BFG 9000</h1>
 							<div class="discount">32500 Р.</div>
@@ -174,7 +175,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img src="img/bfg-3000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 3000">
+								<img src="img/bfg-3000.jpg" width="218" height="180" alt="Перфоратор BOSCH BFG 3000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 3000</h1>
 							<div class="discount">22500 Р.</div>
@@ -186,7 +187,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img src="img/bfg-6000.jpg"  width="127" height="112"  alt="Перфоратор BOSCH BFG 6000">
+								<img src="img/bfg-6000.jpg"  width="218" height="180"  alt="Перфоратор BOSCH BFG 6000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 6000</h1>
 							<div class="discount">30500 Р.</div>
@@ -198,7 +199,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image ">
-								<img src="img/bfg-2000.jpg" width="127" height="112"  alt="Перфоратор BOSCH BFG 2000">
+								<img src="img/bfg-2000.jpg"  width="218" height="180"  alt="Перфоратор BOSCH BFG 2000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 2000</h1>
 							<div class="discount"> </div>
@@ -210,7 +211,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img class="item-img" src="img/bfg-9000.jpg" width="127" height="112" alt=" Перфоратор BOSCH BFG 9000">
+								<img class="item-img" src="img/bfg-9000.jpg"  width="218" height="180" alt=" Перфоратор BOSCH BFG 9000">
 							</div>
 							<h1 class="title"> Перфоратор BOSCH BFG 9000</h1>
 							<div class="discount">32500 Р.</div>
@@ -222,7 +223,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img src="img/bfg-3000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 3000">
+								<img src="img/bfg-3000.jpg" width="218" height="180" alt="Перфоратор BOSCH BFG 3000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 3000</h1>
 							<div class="discount">22500 Р.</div>
@@ -234,7 +235,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image">
-								<img src="img/bfg-6000.jpg"  width="127" height="112"  alt="Перфоратор BOSCH BFG 6000">
+								<img src="img/bfg-6000.jpg"   width="218" height="180"  alt="Перфоратор BOSCH BFG 6000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 6000</h1>
 							<div class="discount">30500 Р.</div>
@@ -246,7 +247,7 @@
 								<a href="#" class="bookmark">В закладки</a>
 							</div>
 							<div class="catalog-item-image ">
-								<img src="img/bfg-2000.jpg" width="127" height="112"  alt="Перфоратор BOSCH BFG 2000">
+								<img src="img/bfg-2000.jpg"  width="218" height="180"  alt="Перфоратор BOSCH BFG 2000">
 							</div>
 							<h1 class="title">Перфоратор BOSCH BFG 2000</h1>
 							<div class="discount"> </div>
@@ -265,42 +266,7 @@
 							<div class="discount">32500 Р.</div>
 							<div class="price">25500 Р.</div>
 						</article>
-						<article class="catalog-item ">
-							<div class="actions">
-								<a href="#" class="buy">Купить</a>
-								<a href="#" class="bookmark">В закладки</a>
-							</div>
-							<div class="catalog-item-image">
-								<img src="img/bfg-3000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 3000">
-							</div>
-							<h1 class="title">Перфоратор BOSCH BFG 3000</h1>
-							<div class="discount">22500 Р.</div>
-							<div class="price">15500 Р.</div>
-						</article>
-						<article class="catalog-item ">
-							<div class="actions">
-								<a href="#" class="buy">Купить</a>
-								<a href="#" class="bookmark">В закладки</a>
-							</div>
-							<div class="catalog-item-image">
-								<img src="img/bfg-6000.jpg"  width="127" height="112"  alt="Перфоратор BOSCH BFG 6000">
-							</div>
-							<h1 class="title">Перфоратор BOSCH BFG 6000</h1>
-							<div class="discount">30500 Р.</div>
-							<div class="price">22500 Р.</div>
-						</article>
-						<article class="catalog-item flag-new">
-							<div class="actions">
-								<a href="#" class="buy">Купить</a>
-								<a href="#" class="bookmark">В закладки</a>
-							</div>
-							<div class="catalog-item-image ">
-								<img src="img/bfg-2000.jpg" width="127" height="112"  alt="Перфоратор BOSCH BFG 2000">
-							</div>
-							<h1 class="title">Перфоратор BOSCH BFG 2000</h1>
-							<div class="discount"> </div>
-							<div class="price">12500 Р.</div>
-						</article>
+					
   <ul class="paginator">
 												<li class="paginator-btn-active">1</li>
 												<li>
@@ -315,6 +281,7 @@
 												</li>
 										</ul>
 					</section>
+	</div>
 	</div>
 </main>
 		
