--- a/6/index.html
+++ b/6/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Техномарт</title>
 	<link href="css/normalize.css" type="text/css" rel="stylesheet">
-	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<link href="css/style-min.css" type="text/css" rel="stylesheet">
 	<link href="css/symbols-technomart.css" type="text/css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
@@ -320,7 +320,7 @@
 					<button class="pop-up-close mapClose" type="button">Закрыть</button>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124068!2d30.32089461623997!3d59.93879686904778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1455868013608" width="940" height="466"  style="border:0" allowfullscreen></iframe>
 				</div>
-				<script src="js/script.js"></script>        
+				<script src="js/script-min.js"></script>        
 			</body>
 			</html>
 
