--- a/6/shop.html
+++ b/6/shop.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Перфораторы</title>
 	<link href="css/normalize.css" type="text/css" rel="stylesheet">
-	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<link href="css/style-min.css" type="text/css" rel="stylesheet">
 	<link href="css/symbols-technomart.css" type="text/css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
