--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
 								<span class="phone">+7 (812) 555-05-55</span>
 								<p>г.Санкт-Петербург,ул.Б.Конюшенная,д19/8</p>
 							</div>
-					<div class="user-block ">
+					<div s="user-block ">
 						<div  class="auth-user">
 							<a class="user-name icon-user" href="#">Равшан Джамшутович</a>
 							<a class="user-exit " href="#"><span class="icon-logout"></span></a>
