--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<div class="header-bottom">
 			<div class="container clearfix">
 				<div class="header-text">
-					<p >Интернет-магазин<br> 
+					Интернет-магазин<br> 
 						строительных материалов <br> 
-						и инструментов для ремонта</p>
+						и инструментов для ремонта
 					</div>
 					<div class="header-contacts">
 						<span class="phone icon-phone ">+7 (812) 555-05-55</span>
@@ -215,7 +215,8 @@
 						<div class="services-slides">
 							<div class="services-slide">
 								<p class="title">Доставка</p>
-								<p class="details">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+								<p class="details">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> 
+								поднимая его на ваш этаж!</p>
 							</div>
 							<div class="services-slide">
 								<p class="title">Гарантия</p>
