--- a/shop.html
+++ b/shop.html
@@ -28,8 +28,8 @@
 		<div class="header-bottom">
 			<div class="container clearfix">
 				<div class="header-text">
-					<p >Интернет-магазин строительных материалов<br>
-						и инструментов для ремонта</p>
+					Интернет-магазин строительных материалов<br>
+						и инструментов для ремонта
 					</div>
 					<div class="header-contacts">
 						<span class="phone icon-phone">+7 (812) 555-05-55</span>
