--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 			<div class="container clearfix">
 				<div class="promo promo-materials  flag-new">
 					<span class="promo-title">Материалы</span>
-					<a class="promo-btn" href="#">На любой вкус</a>
+					<a class="promo-btn" href="shop.html">На любой вкус</a>
 				</div>
 				<div class="promo promo-tools">
 					<span class="promo-title">Инструмент</span>
-					<a class="promo-btn" href="#">На все случаи</a>
+					<a class="promo-btn" href="shop.html">На все случаи</a>
 				</div>
 				<div class="promo promo-machinery">
 					<span class="promo-title">Техника</span>
-					<a class="promo-btn" href="#">Для стройки</a>
+					<a class="promo-btn" href="shop.html">Для стройки</a>
 				</div>
 				<div class="slider">
 					<input  type="radio" id="btn-1" name="toggle1"  checked >
@@ -81,14 +81,14 @@
 							<div class="slider-top">
 								<h1 class="slider-title">Перфораторы</h1>
 								<div class="slider-text">Настоящие мужские игрушки</div>
-								<a href="" class="btn btn-show-catalog">Открыть каталог</a>
+								<a href="shop.html" class="btn btn-show-catalog">Открыть каталог</a>
 							</div>
 						</div>
 						<div class="slide">
 							<div class="slider-top">
 								<h1 class="slider-title">Перфораторы</h1>
 								<div class="slider-text">Настоящие мужские игрушки</div>
-								<a href="" class="btn btn-show-catalog">Открыть каталог</a>
+								<a href="shop.html" class="btn btn-show-catalog">Открыть каталог</a>
 							</div>
 						</div>
 						<label for="btn-1" class="icon-left" ></label>
@@ -109,7 +109,7 @@
 			<div class="container clearfix"> 
 				<div class="section-header clearfix">
 					<h2 class="section-title">Популярные товары:</h2>
-					<a class="btn " href="#">Все популярные товары</a>
+					<a class="btn " href="shop.html">Все популярные товары</a>
 				</div>
 				<div class="catalog-items">
 					<article class="catalog-item">
@@ -167,7 +167,7 @@
 			<div class="container clearfix">
 				<div class="section-header clearfix">
 					<h2 class="section-title">Популярные производители:</h2>
-					<a class="btn " href="#">Все производители</a>
+					<a class="btn " href="shop.html">Все производители</a>
 				</div>
 				<div class="brands">
 					<a href="#">
@@ -255,7 +255,7 @@
 								Вы можете забрать товар сами,<br>
 								заехав в наш офис:</p>
 								<img class="big-map" src="img/map.jpg" width="300" height="158" alt="Компания «ТЕХНОМАРТ»">
-								<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
+								<a class="btn write-us" href="form.html">Заблудились? Напишите нам!</a>
 							</div>
 						</div>
 					</section>
@@ -275,7 +275,7 @@
 									<ul class="footer-nav">
 										<li><a href="#">Компания</a></li>
 										<li><a href="#">Новости</a></li>
-										<li><a href="#">Каталог</a></li>
+										<li><a href="shop.html">Каталог</a></li>
 										<li><a href="#">Доставка</a></li>
 										<li><a href="#">Контакты</a></li>
 									</ul>
