--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,6 @@
 	<title>Перфораторы</title>
 	<link href="css/normalize.css" type="text/css" rel="stylesheet">
 	<link href="css/style-min.css" type="text/css" rel="stylesheet">
-	<link href="css/symbols-technomart.css" type="text/css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
@@ -45,7 +44,7 @@
 					</div>
 					<nav class="header-navigation">
 						<ul>
-							<li><a href="#">Главная</a></li>
+							<li><a href="index.html">Главная</a></li>
 							<li><a href="#">Компания</a></li>
 							<li><a href="#">Каталог</a></li>
 							<li><a href="#">Новости</a></li>
@@ -293,7 +292,7 @@
 					<ul class="footer-nav">
 						<li><a href="#">Компания</a></li>
 						<li><a href="#">Новости</a></li>
-						<li><a href="#">Каталог</a></li>
+						<li><a href="shop.html">Каталог</a></li>
 						<li><a href="#">Доставка</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
